Remoção dos arquivos chatbot.py, chatbot.log, conversation_history.json e rules.json, que continham a lógica e dados do chatbot. Atualização do README.md para refletir as mudanças na estrutura do projeto e adição de novas dependências no requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-sentence-transformers
-torch
-unidecode
-nltk
+sentence-transformers>=2.0.0
+torch>=1.7.0
+unidecode>=1.3.0
+nltk>=3.8.0
+tqdm>=4.65.0
+transformers>=4.35.0
+numpy>=1.24.0
+scikit-learn>=1.0.0
